# CS457

./: README.md  README.txt  notes 8-30
Client/: CMakeLists.txt  ClientDriver.cpp  Protocols.cpp  Protocols.h  TEST1  tcpUserSocket.cpp  tcpUserSocket.h
Client/conf/: chatclient.conf
Server/: CClient.cpp  CClient.h  CMakeLists.txt  Channel.cpp  Channel.h  ChatServer.cpp  ChatServer.h  ClientManager.cpp  ClientManager.h  OutputManager.cpp  OutputManager.h  Protocols.cpp  Protocols.h  Server.cpp  Server.h  User.cpp  User.h  a.out  driver.cpp  tcpServerSocket.cpp  tcpServerSocket.h  tcpUserSocket.cpp  tcpUserSocket.h  users
Server/conf/: chatserver.conf
Server/db/: banner.txt  channels  help.txt  rules.txt  users
Server/db/userChannels/: mark.txt
